# Calibrated-Introspection

./: .gitignore  pyproject.toml  requirements.txt
paper/: 00_novelty_findings.md  01_protocol_E1_access_probe.md  02_protocol_E3_causal_validation.md  03_protocol_E4_predictive_test.md  04_protocol_E5_E6_mechanism_generalization.md  05_intro_related_work.md  06_pivot_calibrated_introspection.md  07_intro_calibrated.md
scripts/: build_corpus.py  build_corpus_demo.py  calibration_analysis.py  fit_probe.py  make_calibration_input.py  predictive_test.py  run_real_model.py
src/aacot/: __init__.py  activations.py  answer_extract.py  build_stimuli.py  calibration.py  cells.py  config.py  elicit.py  hints.py  probes.py  questions.py  runner.py  schema.py  steering.py  verbalize.py  vft_data.py
tests/: test_core.py
