[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "aacot"
version = "0.1.0"
description = "Access vs Articulation: counterfactual-influence corpus and probes for CoT faithfulness"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
